--- a/src/components/Tabs/style.css
+++ b/src/components/Tabs/style.css
@@ -2,7 +2,7 @@
   max-width: 146px;
 }
 
-:where(.css-dev-only-do-not-override-26rdvq).ant-tabs {
+.ant-tabs {
   display: flex;
   align-items: center;
   font-family: 'Inter';
